<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".login.mobilenumber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/send_otp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/sendmail"
        android:layout_marginTop="90dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/we_will_send_you_one_time_otp_on_this_mobile_number"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:background="@drawable/backgroundbox"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/_91"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/input_mobile_no"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/_9523677530"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_getOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_otp"
                android:layout_margin="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progress_send_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>



        </FrameLayout>


    </LinearLayout>
</ScrollView>